@@ -27,7 +27,7 @@ $lang_translation_info = array(
   'trans_name'=> 'Piranha',
   'trans_email' => 'rc@rc.sk',
   'trans_website' => 'http://www.kravata.sk',
-  'trans_date' => '2006-02-02',
+  'trans_date' => '2009-07-21',
 );
 
 $lang_charset = 'utf-8';
@@ -51,13 +51,13 @@ $lang_check_uncheck_all = 'označ/odznač všetko'; //cpg1.4
 
 // The various date formats
 // See http://www.php.net/manual/en/function.strftime.php to define the variable below
-$album_date_fmt =    '%B %d, %Y';
-$lastcom_date_fmt =  '%m/%d/%y at %H:%M';
-$lastup_date_fmt = '%B %d, %Y';
-$register_date_fmt = '%B %d, %Y';
-$lasthit_date_fmt = '%B %d, %Y at %I:%M %p';
-$comment_date_fmt =  '%B %d, %Y at %I:%M %p';
-$log_date_fmt = '%B %d, %Y at %I:%M %p'; //cpg1.4
+$album_date_fmt =    '%d. %B %Y';
+$lastcom_date_fmt =  '%d. %B %Y v %H:%M';
+$lastup_date_fmt = '%d. %B %Y';
+$register_date_fmt = '%d. %B %Y';
+$lasthit_date_fmt = '%d. %B %Y v %H:%M';
+$comment_date_fmt =  '%d. %B %Y v %H:%M';
+$log_date_fmt = '%d. %B %Y v %H:%M';
 
 // For the word censor
 $lang_bad_words = array('*fuck*', 'asshole', 'assramer', 'bitch*', 'c0ck', 'clits', 'Cock', 'cum', 'cunt*', 'dago', 'daygo', 'dego', 'dick*', 'dildo', 'fanculo', 'feces', 'foreskin', 'Fu\(*', 'fuk*', 'honkey', 'hore', 'injun', 'kike', 'lesbo', 'masturbat*', 'motherfucker', 'nazis', 'nigger*', 'nutsack', 'penis', 'phuck', 'poop', 'pussy', 'scrotum', 'shit', 'slut', 'titties', 'titty', 'twaty', 'wank*', 'whore', 'wop*', 'piča', 'hovno', '*fuck*', 'prdel', 'čurák', 'bitch*', 'c0ck', 'clits', 'Cock', 'cum', 'cunt*', 'dago', 'daygo', 'dego', 'dick*', 'dildo', 'fanculo', 'feces', 'foreskin', 'Fu\(*', 'fuk*', 'honkey', 'hore', 'injun', 'kike', 'lesbo', 'masturbat*', 'motherfucker', 'nazis', 'nigger*', 'nutsack', 'penis', 'phuck', 'poop', 'pussy', 'scrotum', 'shit', 'slut', 'titties', 'titty', 'twaty', 'wank*', 'whore', 'wop*', 'kokot');
